// 루트 스택 — **골격이 실제로 도는가**를 본다. 화면 내용은 자리표시자라 볼 것이 없다(4단계 몫).
//
// 검사하는 것 넷:
//   ① 온보딩 분기가 **양방향**으로 도는가 (미완료 → 온보딩만 / 완료 → 탭 + 하위 페이지)
//   ② 계획서 §1 의 하위 페이지 열하나가 **하나도 빠짐없이 열리는가**
//   ③ 같은 상세를 두 경로가 가리키는가 ([[ADR-125]] 결정 3)
//   ④ 하위 페이지가 열려도 아래 탭 화면이 **언마운트되지 않는가** ([[ADR-077]] · [[ADR-120]] 결정 4)
//
// ── `act` 를 쓰는 규칙 (실측 2026-08-12) ──────────────────────────────────────────────
//
// **렌더 *전*에 `act()` 를 부르면 그 뒤의 `render()` 가 `null` 을 낸다.** RNTL 14 의 `render` 가
// 비동기라(동시성 루트) 이미 열린 act 스코프와 겹치는 것으로 보인다 — 원인을 끝까지 파지는 않았고,
// 대신 규칙 둘로 우회한다:
//   · 렌더 전 상태 준비는 **그냥 `setState`**(마운트된 컴포넌트가 없어 `act` 가 필요 없다)
//   · 렌더 후 갱신은 **`await act(async () => ...)`** — `await` 없는 동기 `act` 는 갱신이
//     반영되지 않은 채 통과한다(단언이 옛 화면을 보고도 초록이 된다)
import { act, render, screen } from '@testing-library/react-native'
import { createNavigationContainerRef } from '@react-navigation/native'
import { useOnboardingStore } from '@core/features/onboarding/store'

import { NavigationHarness } from './harness'
import { normalizeNavigationTree } from './normalize-tree'
import { FEATURE_GUIDE_ROUTE_NAMES, STACK_ROUTE_NAMES, type RootStackParamList } from '../routes'

jest.mock('@core/features/ads/tab-switch-ad', () => ({
  __esModule: true,
  maybeShowTabSwitchAd: jest.fn(async () => {}),
  startAds: jest.fn(async () => {}),
}))

type Status = 'awaitingApiKey' | 'completed'

beforeEach(() => {
  useOnboardingStore.setState({ status: 'awaitingApiKey' })
})

describe('온보딩 분기', () => {
  it('미완료면 온보딩만 있고 탭은 그려지지 않는다', async () => {
    useOnboardingStore.setState({ status: 'awaitingApiKey' })

    await render(<NavigationHarness />)

    expect(screen.getByTestId('screen-Onboarding')).toBeTruthy()
    expect(screen.queryByTestId('screen-Content', { includeHiddenElements: true })).toBeNull()
  })

  it('완료면 탭이 그려지고 온보딩은 사라진다', async () => {
    useOnboardingStore.setState({ status: 'completed' })

    await render(<NavigationHarness />)

    expect(screen.getByTestId('screen-Content')).toBeTruthy()
    expect(screen.queryByTestId('screen-Onboarding', { includeHiddenElements: true })).toBeNull()
  })

  // **양방향이 요점이다.** 한 방향만 보면 "처음부터 완료였다"와 구분되지 않는다. 웹은 라우트마다
  // `<Navigate replace>` 를 걸어 이 전환을 만들었고, RN 은 화면 목록 자체를 갈아 끼운다
  // (`RootNavigator` 주석) — 계약은 같으므로 여기서 같은 것을 묻는다.
  it('미완료 → 완료 → 미완료 로 오갈 때 화면이 따라 바뀐다', async () => {
    useOnboardingStore.setState({ status: 'awaitingApiKey' })
    await render(<NavigationHarness />)
    expect(screen.getByTestId('screen-Onboarding')).toBeTruthy()

    const setStatus = async (status: Status): Promise<void> => {
      await act(async () => {
        useOnboardingStore.setState({ status })
      })
    }

    await setStatus('completed')
    expect(screen.getByTestId('screen-Content')).toBeTruthy()
    expect(screen.queryByTestId('screen-Onboarding', { includeHiddenElements: true })).toBeNull()

    await setStatus('awaitingApiKey')
    expect(screen.getByTestId('screen-Onboarding')).toBeTruthy()
    expect(screen.queryByTestId('screen-Content', { includeHiddenElements: true })).toBeNull()
  })
})

describe('하위 페이지 — 계획서 §1 의 열하나', () => {
  const params: Partial<Record<(typeof STACK_ROUTE_NAMES)[number], object>> = {
    SettingsFeatureGuide: { guideId: 'boss-card-party' },
    SettingsReleaseNoteGuide: { guideId: 'boss-card-party' },
  }

  it.each(STACK_ROUTE_NAMES)('%s 로 push 하면 그 화면이 열린다', async (name) => {
    useOnboardingStore.setState({ status: 'completed' })
    const navigationRef = createNavigationContainerRef<RootStackParamList>()

    await render(<NavigationHarness navigationRef={navigationRef} />)

    await act(async () => {
      // 이름·파라미터 조합이 라우트마다 달라 여기서만 타입을 느슨하게 둔다 — 목록을 손으로 적지
      // 않고 `STACK_ROUTE_NAMES` 를 도는 것이 이 테스트의 값이라(빠뜨림이 드러난다) 그 대가로 받는다.
      ;(navigationRef.navigate as (name: string, params?: object) => void)(name, params[name])
    })

    expect(screen.getByTestId(`screen-${name}`)).toBeTruthy()
  })

  // [[ADR-077]] 이 세우고 [[ADR-120]] 결정 4 가 일곱 곳으로 넓힌 계약 — 아래 화면이 살아 있어야
  // 전환 중에 보여줄 것이 있고, 펼침·기간·스크롤도 남는다. 네이티브 스택이 공짜로 주는 성질이지만
  // 공짜라고 검사하지 않으면 나중에 `presentation` 을 바꿨을 때 조용히 잃는다.
  //
  // `includeHiddenElements` 가 필요한 것이 오히려 증거다 — 아래 화면은 **접근성에서만 가려졌고**
  // 트리에는 그대로 있다(언마운트됐다면 이 옵션으로도 안 나온다).
  it('하위 페이지가 열려도 아래 탭 화면이 남아 있다', async () => {
    useOnboardingStore.setState({ status: 'completed' })
    const navigationRef = createNavigationContainerRef<RootStackParamList>()

    await render(<NavigationHarness navigationRef={navigationRef} />)
    await act(async () => {
      navigationRef.navigate('ContentManage')
    })

    expect(screen.getByTestId('screen-ContentManage')).toBeTruthy()
    expect(screen.getByTestId('screen-Content', { includeHiddenElements: true })).toBeTruthy()
  })

  it('뒤로 가면 하위 페이지만 사라진다', async () => {
    useOnboardingStore.setState({ status: 'completed' })
    const navigationRef = createNavigationContainerRef<RootStackParamList>()

    await render(<NavigationHarness navigationRef={navigationRef} />)
    await act(async () => {
      navigationRef.navigate('ContentManage')
    })
    await act(async () => {
      navigationRef.goBack()
    })

    expect(screen.queryByTestId('screen-ContentManage', { includeHiddenElements: true })).toBeNull()
    expect(screen.getByTestId('screen-Content')).toBeTruthy()
  })
})

// 앞엣것은 기능 설명 목록에서, 뒤엣것은 개발 노트에서 열리는 경로다.
describe('안내 상세는 두 경로가 같은 화면을 그린다 ([[ADR-125]] 결정 3)', () => {
  it.each(FEATURE_GUIDE_ROUTE_NAMES)('%s 로 열어도 같은 상세에 같은 guideId 가 실린다', async (routeName) => {
    useOnboardingStore.setState({ status: 'completed' })
    const navigationRef = createNavigationContainerRef<RootStackParamList>()

    await render(<NavigationHarness navigationRef={navigationRef} />)
    await act(async () => {
      navigationRef.navigate(routeName, { guideId: 'boss-card-party', section: 'party-size' })
    })

    expect(screen.getByTestId(`screen-${routeName}`)).toBeTruthy()
    expect(screen.getByTestId('feature-guide-id')).toHaveTextContent('boss-card-party')
    // 웹의 `?s=` 자리([[ADR-125]] 결정 7) — 경로가 아니라 파라미터라 스택 한 단으로 읽히지 않는다.
    expect(screen.getByTestId('feature-guide-section')).toHaveTextContent('party-size')
  })
})

// 이 스냅샷이 답하는 것은 *"앞으로 안 바뀌는가"* 뿐이다 — 웹뷰 앱과의 대조가 아니다
// (`docs/migration/README.md` «잃는 안전망»). 탭 넷과 탭바가 실제로 그려진 트리를 고정한다.
//
// **온보딩 쪽은 step 2 부터 진짜 화면이 들어 있다**(자리표시자 → `OnboardingScreen`). 그래서 이
// 스냅샷은 그 화면이 바뀌면 함께 움직인다 — 자리표시자였을 때보다 시끄럽지만, 그것이 이 기준선이
// 실제로 고정하기로 한 것이다(내비게이터가 그 자리에 무엇을 그리는가). 화면 내부의 계약은
// `src/app/onboarding/__tests__` 가 따로 본다.
describe('렌더 트리 스냅샷', () => {
  it('탭 골격', async () => {
    useOnboardingStore.setState({ status: 'completed' })

    expect(normalizeNavigationTree((await render(<NavigationHarness />)).toJSON())).toMatchSnapshot()
  })

  it('온보딩 골격', async () => {
    useOnboardingStore.setState({ status: 'awaitingApiKey' })

    expect(normalizeNavigationTree((await render(<NavigationHarness />)).toJSON())).toMatchSnapshot()
  })
})
